--- a/sniffersapp/templates/daily_dockets/docket_list.html
+++ b/sniffersapp/templates/daily_dockets/docket_list.html
@@ -16,23 +16,22 @@
 </ol>
 {% endblock breadcrumb %}
 
-{% block actions %}
-<a class="btn btn-primary visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'daily_dockets:daily_docket_new' %}"><i class="fa fa-paste" style="padding-right: 5px;"></i>New Docket</a></li>
-{% endblock %}
-
-
-
 {% block content %}
 <div class="row">
     <div class="docket_buttons btn-group visible-md visible-lg pull-left">
         <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:daily_docket_new' %}"><i class="fa fa-paste" style="padding-right: 5px;"></i>New Docket</a></li>
     </div>
+    <div class="docket_buttons btn-group visible-xs visible-sm pull-left">
+        <a class="btn btn-primary" href="{% url 'daily_dockets:daily_docket_new' %}"><i class="fa fa-paste" style="padding-right: 5px;"></i>New Docket</a></li>
+    </div>
+    {% if user.is_staff %}
     <div class="docket_buttons btn-group visible-md visible-lg pull-left">
         <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:export_dockets' %}"><i class="fa fa-upload" style="padding-right: 5px;"></i>Export CSV</a></li>
     </div>
     <div class="docket_buttons btn-group visible-md visible-lg pull-left">
-        <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:dockets_myob' %}"><i class="fa fa-exchange" style="padding-right: 5px;"></i>Export MYOB</a></li>
+        <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:dockets_myob' %}"><i class="fa fa-exchange" style="padding-right: 5px;"></i>MYOB CSV</a></li>
     </div>
+    {% endif %}
 </div>
 
 <div class="col-lg-12">
