--- a/sniffersapp/static/css/james.css
+++ b/sniffersapp/static/css/james.css
@@ -8,6 +8,14 @@ body {
     border: 1px solid #e5e6e7 !important;
 }
 
+.error-box {
+    color: #ffffff !important;
+    font-size: 14px;
+    background-color: #ed5565 !important;
+    width: 100%;
+    text-align: center;
+}
+
 /*nav bar */
 
 .snifferapp-logo-container {
@@ -45,32 +53,38 @@ body {
 }
 
 .docket-title{
+    float: left;
     border: none;
-    padding-top: 15px !important;
+    padding-top: 10px !important;
     padding-right: 10px !important;
-    padding-bottom: 15px !important;
-    padding-left: 0px !important;
+    padding-bottom: 10px !important;
+    padding-left: 15px !important;
     vertical-align: middle !important;
     line-height: 17px !important;
+    border-left: 4px solid #1ab394;
 }
 
 .docket-check{
-    width: 35px;
-    border: none;
+  float: right;
+    width: 200px;
     padding-top: 5px !important;
     padding-right: 10px !important;
     padding-bottom: 5px !important;
     padding-left: 0px !important;
-    vertical-align: middle !important;
-    line-height: 17px !important;
+}
+
+.item_option {
+    margin-bottom: 5px !important;
+    margin-top: 5px !important;
 }
 
 .docket_colour_div {
+    float: left;
     vertical-align: middle !important;
     padding-top: 5px !important;
     padding-bottom: 5px !important;
     padding-left: 0px !important;
-    padding-right: 5px !important;
+    padding-right: 20px !important;
     width: 10px !important;
 }
 
@@ -98,9 +112,17 @@ body {
     margin-right: 10px;
 }
 
-.docket_signature, .docket_checklist {
+.docket_checklist {
     padding-top: 30px;
     border-top: 2px solid #e5e6e7;
+
+}
+
+.docket_signature {
+    padding-top: 30px;
+    border-top: 1px solid #e5e6e7;
+    width: 100%;
+    float: left;
 
 }
 
@@ -115,6 +137,22 @@ body {
     cursor: not-allowed;
 }
 
+.docket_item_sum{
+    font-weight: bold;
+    font-style: italic;
+}
+
+#operator-sign-pad, #supervisor-sign-pad {
+  width: 90%;
+  height: 200px;
+}
+
+.invoice-table tbody tr td {
+    border-top: 1px solid #e7eaec !important;
+    line-height: 1.42857 !important;
+    padding: 8px !important;
+    vertical-align: top!important;
+}
 
 
 /* DataTable */
@@ -536,4 +574,48 @@ height: 100px;
 
 .navbar-static-top .btn-group .btn {
     margin-left: 5px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .docket_signature_item, .docket_signature {
+    display: block;
+    width: 100%;
+    float: none;
+    margin-left: 15px;
+  }
+  #operator-sign-pad, #supervisor-sign-pad {
+    width: 100%;
+    height: 200px;
+  }
+}
+
+@media only screen and (max-width: 1030px) {
+  .docket_text {
+    display: block;
+    width: 100%;
+    float: none;
+    margin-left: 15px;
+  }
+}
+
+@media only screen and (max-width: 1010px) {
+  .docket-title {
+    margin-bottom: 10px;
+  }
+
+  .docket-check {
+    display: block;
+    width: 50%;
+    float: none;
+    margin-left: 15px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .docket-check {
+    display: block;
+    width: 100%;
+    float: none;
+    margin-left: 15px;
+  }
 }
