--- a/sniffersapp/templates/daily_dockets/daily_docket_new.html
+++ b/sniffersapp/templates/daily_dockets/daily_docket_new.html
@@ -42,11 +42,6 @@
           <i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back
         </a>
     </div>
-    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
-        <a class="btn btn-primary btn-sm" onclick="prestart_form.myVariable.name='new_prestart';prestart_form.submit();">
-          <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save Docket
-        </a>
-    </div>
 </div>
 <div class="col-lg-12">
     <div class="ibox">
@@ -60,23 +55,20 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8">
+                <div>
                     <table class="table table-hover" >
                         <tbody>
                             <tr class="table-row" data-href="{% url 'daily_dockets:prestart_form' %}" style="cursor: pointer;">
-                                <td class="docket_colour_div" ><div class="docket_colour_element"></div></td>
                                 <td class="docket-status"><i class="fa fa-square-o fa-2x" aria-hidden="true"></i></td>
-                                <td class="docket-title"><b>Complete Daily Prestart</b></td>
+                                <td class="docket-title" style=" border: 0px;"><b>Complete Daily Prestart</b></td>
                             </tr>
                             <tr class="docket_disabled">
-                                <td class="docket_colour_div" ><div class="docket_colour_element"></div></td>
                                 <td class="docket-status"><i class="fa fa-square-o fa-2x" aria-hidden="true"></i></td>
-                                <td class="docket-title"><b>Complete Daily Docket</b></td>
+                                <td class="docket-title" style=" border: 0px;"><b>Complete Daily Docket</b></td>
                             </tr>
                             <tr class="docket_disabled">
-                                <td class="docket_colour_div" ><div class="docket_colour_element"></div></td>
                                 <td class="docket-status"><i class="fa fa-square-o fa-2x" aria-hidden="true"></i></td>
-                                <td class="docket-title"><b>Sign Daily Docket</b></td>
+                                <td class="docket-title" style=" border: 0px;"><b>Sign Daily Docket</b></td>
                             </tr>
                         </tbody>
                     </table>
