--- a/sniffersapp/templates/daily_dockets/daily_docket_sum.html
+++ b/sniffersapp/templates/daily_dockets/daily_docket_sum.html
@@ -21,7 +21,7 @@
 
 
 {% block actions %}
-<a class="btn btn-primary btn-lg visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'daily_dockets:list' %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
+<a class="btn btn-primary visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'daily_dockets:list' %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
 {% endblock %}
 
 
@@ -91,11 +91,7 @@
                               <div class="row">
                                   <div class="col-sm-4 docket_text">
                                       <span class="docket_text_heading">ITEM OR PLANT:</span>
-                                      <span>{{ docket.equipment_name }}</span>
-                                  </div>
-                                  <div class="col-sm-4 docket_text">
-                                      <span class="docket_text_heading">UNIT NO:</span>
-                                      <span>Need to add</span>
+                                      <span>{{ docket.equipment }}</span>
                                   </div>
                               </div>
                               <div class="row">
@@ -124,8 +120,12 @@
                               </div>
                               <div class="row">
                                   <div class="col-sm-4 docket_text">
-                                      <span class="docket_text_heading">LUNCH / SMOKO:</span>
+                                      <span class="docket_text_heading">LUNCH:</span>
                                       <span>{{ docket.lunch }}mins</span>
+                                  </div>
+                                  <div class="col-sm-4 docket_text">
+                                      <span class="docket_text_heading">SMOKO:</span>
+                                      <span>{{ docket.smoko }}mins</span>
                                   </div>
                                   <div class="col-sm-4 docket_text">
                                       <span class="docket_text_heading">PAYABLE HOURS:</span>
@@ -133,64 +133,68 @@
                                   </div>
                               </div>
                               <div class="row">
-                                  <div class="col-sm-12 docket_text">
-                                      <span class="docket_text_heading">ATTACHMENTS USED:</span>
-                                      <span>{{ docket.attachments }}</span>
+                                  <div class="col-sm-4 docket_text">
+                                      <span class="docket_text_heading">ATTACHMENT:</span>
+                                      <span>{{ docket.attachment }}</span>
+                                  </div>
+                                  <div class="col-sm-4 docket_text">
+                                      <span class="docket_text_heading">ATTACHMENT HOURS:</span>
+                                      <span>{{ docket.attachment_hours }}</span>
                                   </div>
                               </div>
                               <div class="table-responsive m-t docket_checklist">
                                   <h3>PLANT OPERATORS' DAILY SAFETY CHECKLIST</h3>
                                   <table class="table invoice-table">
-                                      <tbody>
-                                      <tr>
-                                          <td><div><strong>1. Brakes, steering, gauges, lights, warning devices</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>2. Visibility - windscreen, wipers, washers, demisters, mirrors, windows</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>3. Cabin - access, seating, seatbelts, loose objects, control levers</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>4. Wheels, tyres, nutes, damage, wear, pressure</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>5. Guards - in place, secure, warning signs lights, alarms</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>6. Hydraulics - rams, hoses, leaks, wear</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>7. Excessive wear - hooks, chains, pins, pivots, tracks, G.E.T.</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>8. Oils and coolants level</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>9. Misc, electrical, fire extinguisher, communications</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>10. Quick hitch attachments</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>11. You are free from the influences of drugs and alcohol</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      <tr>
-                                          <td><div><strong>12. You are physically and mentally fit to operate or drive</strong></div>
-                                          <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
-                                      </tr>
-                                      </tbody>
+                                    <tbody>
+                                    <tr>
+                                        <td><div><strong>1. Brakes, steering, gauges, lights, warning devices</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item1 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>2. Visibility - windscreen, wipers, washers, demisters, mirrors, windows</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item2 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>3. Cabin - access, seating, seatbelts, loose objects, control levers</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item3 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>4. Wheels, tyres, nutes, damage, wear, pressure</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item4 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>5. Guards - in place, secure, warning signs lights, alarms</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item5 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>6. Hydraulics - rams, hoses, leaks, wear</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item6 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>7. Excessive wear - hooks, chains, pins, pivots, tracks, G.E.T.</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item7 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>8. Oils and coolants level</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item8 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>9. Misc, electrical, fire extinguisher, communications</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item9 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>10. Quick hitch attachments</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item10 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>11. You are free from the influences of drugs and alcohol</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item11 }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><div><strong>12. You are physically and mentally fit to operate or drive</strong></div>
+                                        <td class="docket_item_sum">{{ docket.item12 }}</td>
+                                    </tr>
+                                    </tbody>
                                   </table>
                               </div><!-- /table-responsive -->
                               <div class="row">
