--- a/sniffersapp/templates/daily_dockets/docket_signature.html
+++ b/sniffersapp/templates/daily_dockets/docket_signature.html
@@ -8,6 +8,10 @@
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
 {% endblock %}
 
+{% block actions %}
+<a class="btn btn-primary visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'daily_dockets:docket_start' docket.slug %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
+{% endblock %}
+
 {% block breadcrumb %}
 <ol class="breadcrumb">
     <li>
@@ -26,6 +30,13 @@
 {% endblock breadcrumb %}
 
 {% block content %}
+<div class="row">
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" href="{% url 'daily_dockets:docket_start' docket.slug %}">
+          <i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back
+        </a>
+    </div>
+</div>
 <div class="col-lg-12">
         <div class="ibox-content p-xl">
                 <div class="row docket_image">
@@ -60,11 +71,7 @@
                 <div class="row">
                     <div class="col-sm-4 docket_text">
                         <span class="docket_text_heading">ITEM OR PLANT:</span>
-                        <span id="docket_equipment_name">{{ docket.equipment_name }}</span>
-                    </div>
-                    <div class="col-sm-4 docket_text">
-                        <span class="docket_text_heading">UNIT NO:</span>
-                        <span>{{ docket.equipment_num }}</span>
+                        <span id="docket_equipment_name">{{ docket.equipment }}</span>
                     </div>
                 </div>
                 <div class="row">
@@ -93,8 +100,12 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4 docket_text">
-                        <span class="docket_text_heading">LUNCH / SMOKO:</span>
+                        <span class="docket_text_heading">LUNCH:</span>
                         <span id="docket_lunch">{{ docket.lunch }}mins</span>
+                    </div>
+                    <div class="col-sm-4 docket_text">
+                        <span class="docket_text_heading">SMOKO:</span>
+                        <span id="docket_lunch">{{ docket.smoko }}mins</span>
                     </div>
                     <div class="col-sm-4 docket_text">
                         <span class="docket_text_heading">PAYABLE HOURS:</span>
@@ -102,12 +113,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 docket_text">
-                        <span class="docket_text_heading">ATTACHMENTS USED:</span>
-                        <span>{{ docket.attachments }}</span>
+                    <div class="col-sm-4 docket_text">
+                        <span class="docket_text_heading">ATTACHMENT:</span>
+                        <span>{{ docket.attachment }}</span>
+                    </div>
+                    <div class="col-sm-4 docket_text">
+                        <span class="docket_text_heading">ATTACHMENT HOURS:</span>
+                        <span>{{ docket.attachment_hours }}</span>
                     </div>
                 </div>
-                <div class="table-responsive m-t docket_checklist">
+                <div class="table-responsive m-t docket_checklist visible-md visible-lg">
                     <h3>PLANT OPERATORS' DAILY SAFETY CHECKLIST</h3>
                     <h4>Operators are required to check the following items before commencing work. These records are for the basis of a  plant maintenace procedure and will be subject to random inspection. Keep the record with you at all times.</h4>
                     <h4>Before commencing operation check:</h4>
@@ -115,62 +130,62 @@
                         <tbody>
                         <tr>
                             <td><div><strong>1. Brakes, steering, gauges, lights, warning devices</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item1 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>2. Visibility - windscreen, wipers, washers, demisters, mirrors, windows</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item2 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>3. Cabin - access, seating, seatbelts, loose objects, control levers</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item3 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>4. Wheels, tyres, nutes, damage, wear, pressure</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item4 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>5. Guards - in place, secure, warning signs lights, alarms</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item5 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>6. Hydraulics - rams, hoses, leaks, wear</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item6 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>7. Excessive wear - hooks, chains, pins, pivots, tracks, G.E.T.</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item7 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>8. Oils and coolants level</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item8 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>9. Misc, electrical, fire extinguisher, communications</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item9 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>10. Quick hitch attachments</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item10 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>11. You are free from the influences of drugs and alcohol</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item11 }}</td>
                         </tr>
                         <tr>
                             <td><div><strong>12. You are physically and mentally fit to operate or drive</strong></div>
-                            <td><i class="fa fa-check-square-o fa-2x" aria-hidden="true"></i></td>
+                            <td class="docket_item_sum">{{ docket.item12 }}</td>
                         </tr>
                         </tbody>
                     </table>
-                </div><!-- /table-responsive -->
-                <div class="row">
+                </div>
+                <div class="row visible-md visible-lg">
                     <div class="col-sm-12 docket_text">
                         <span class="docket_text_heading">Details of Fault/Defect:</span>
                         <span>{{ docket.fault }}</span>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row visible-md visible-lg">
                     <div class="col-sm-12 docket_text">
                         <span class="docket_text_heading">Fault Reported to:</span>
                         <span>{{ docket.reported_to }}</span>
@@ -180,25 +195,25 @@
                     <input type="hidden" id="myVariable" name="" />
                     {% csrf_token %}
                     <div class="row docket_signature">
-                        <div class="col-sm-6 docket_text">
+                        <div class="col-sm-6 docket_text docket_signature_item">
                             <span class="docket_text_heading">Operator Signature</span>
                                 <div class="wrapper">
                                   <span class="operator-sig-validation"></span>
-                                  <canvas id="operator-sign-pad" class="signature-pad" width=400 height=200 style="border: .5px solid #d5d5d5;"></canvas>
+                                  <canvas id="operator-sign-pad" class="signature-pad" style="border: .5px solid #d5d5d5;"></canvas>
                                 </div>
                             <input class="hidden" name="operator_sign" id="operator_sign">
                         </div>
-                        <div class="col-sm-6 docket_text">
+                        <div class="col-sm-6 docket_text docket_signature_item">
                             <span class="docket_text_heading">Supervisor Signature</span>
                             <div class="wrapper">
                               <span class="operator-sig-validation"></span>
-                              <canvas id="supervisor-sign-pad" class="signature-pad" width=400 height=200 style="border: .5px solid #d5d5d5;"></canvas>
+                              <canvas id="supervisor-sign-pad" class="signature-pad" style="border: .5px solid #d5d5d5;"></canvas>
                             </div>
                             <input class="hidden" name="supervisor_sign" id="supervisor_sign">
                         </div>
                     </div>
                     <div class="row">
-                        <input type="submit" class="btn btn-primary btl-lg" style="width: 100%; height: 60px;">
+                        <input type="submit" class="btn btn-primary pull-right">
                     </dv>
                 </form>
             </div>
