--- a/sniffersapp/templates/daily_dockets/prestart_detail.html
+++ b/sniffersapp/templates/daily_dockets/prestart_detail.html
@@ -34,7 +34,7 @@
 
 
 {% block actions %}
-<a class="btn btn-primary btn-lg visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'daily_dockets:daily_docket_new' %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
+<a class="btn btn-primary visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'daily_dockets:daily_docket_new' %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
 {% endblock %}
 
 
@@ -62,9 +62,15 @@
         <input type="hidden" id="myVariable" name="" />
         {% csrf_token %}
         {% if prestart_form.errors %}
-        <div class="ibox-content m-b-sm border-bottom">
-            <strong>Please correct the following errors:</strong>
-            {{ prestart_form.errors.as_ul }}
+        <div class="ibox-content m-b-sm error-box">
+            <strong>Please ensure that you have completed all fields</strong>
+            {% for field in prestart_form %}
+              {% if field.errors %}
+              <li style="font-weight: 700;font-size: 13px;">
+                {{ field.label }}
+              </li>
+              {% endif %}
+            {% endfor %}
         </div>
         {% endif %}
 
@@ -103,6 +109,20 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <label>{{ prestart_form.attachment.label }}</label>
+                        {{ prestart_form.attachment }}
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <label>{{ prestart_form.attachment_hours.label }}</label>
+                        {{ prestart_form.attachment_hours }}
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="row">
@@ -113,73 +133,56 @@
                         <h4>Before commencing operation check:</h4>
                     </div>
                     <div class="ibox-content">
-                        <table class="table table-hover" id="check_items">
-                            <tbody>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item1.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item1 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item2.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item2 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item3.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item3 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item4.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item4 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item5.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item5 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item6.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item6 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item7.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item7 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item8.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item8 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item9.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item9 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item10.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item10 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item11.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item11 }}</b></td>
-                                </tr>
-                                <tr style="cursor: pointer;">
-                                    <td class="docket_colour_div" ><div class="client_colour_element"></div></td>
-                                    <td class="project-title"><b>{{ prestart_form.item12.label }}</b></td>
-                                    <td class="docket-check"><b>{{ prestart_form.item12 }}</b></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        {{ prestart_form.attachments }}
-                        {{ prestart_form.fault }}
-                        {{ prestart_form.reported_to }}
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item1.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item1 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item2.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item2 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item3.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item3 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item4.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item4 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item5.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item5 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item6.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item6 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item7.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item7 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item8.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item8 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item9.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item9 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item10.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item10 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item11.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item11 }}</b></div>
+                      </div>
+                      <div class='row' style='border-bottom: 1px solid #e7eaec;'>
+                        <div class="docket-title"><b>{{ prestart_form.item12.label }}</b></div>
+                        <div class="docket-check" ><b>{{ prestart_form.item12 }}</b></div>
+                      </div>
+                      {{ prestart_form.fault }}
+                      {{ prestart_form.reported_to }}
                     </div>
                 </div>
             </div>
@@ -187,7 +190,7 @@
     </form>
     <div class="row">
       <div class="docket_buttons btn-group pull-right" style="margin-right: 15px;">
-          <a class="btn btn-primary btn-lg visible-xs visible-sm" onclick="prestart_form.myVariable.name='new_prestart';prestart_form.submit();">
+          <a class="btn btn-primary visible-xs visible-sm" onclick="prestart_form.myVariable.name='new_prestart';prestart_form.submit();">
             <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save Prestart
           </a>
       </div>
@@ -210,11 +213,11 @@ $('#docket_date_tag').datepicker({
     autoclose: true
 });
 
-/* Toggle checkbox when clicking row */
-$('#check_items tr td.project-title').click(function() {
-    var check = $('input[type=checkbox]', $(this).next());
-    $(check).prop("checked", !$(check).prop('checked'));
-});
+// /* Toggle checkbox when clicking row */
+// $('#check_items tr td.project-title').click(function() {
+//     var check = $('input[type=select]', $(this).next());
+//     $(check).prop("checked", !$(check).prop('checked'));
+// });
 </script>
 {{ prestart_form.media.js }}
 {% endblock javascript %}
