--- a/sniffersapp/static/css/james.css
+++ b/sniffersapp/static/css/james.css
@@ -117,7 +117,7 @@ body {
 }
 
 .docket_checklist {
-    padding-top: 30px;
+    padding-top: 10px;
     border-top: 2px solid #e5e6e7;
 
 }
@@ -612,6 +612,15 @@ height: 100px;
     width: 50%;
     float: none;
     margin-left: 15px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+
+  .timesheet_fields {
+    display: block;
+    width: 100%;
+    float: none;
   }
 }
 
