--- a/sniffersapp/templates/daily_dockets/docket_signature.html
+++ b/sniffersapp/templates/daily_dockets/docket_signature.html
@@ -121,20 +121,56 @@
                         <span>{{ docket.payable_hours.0 }}h {{ docket.payable_hours.1 }}m</span>
                     </div>
                 </div>
+                {% if docket.attachment_1 != None %}
                 <div class="row">
                     <div class="col-sm-4 docket_text">
-                        <span class="docket_text_heading">ATTACHMENT:</span>
-                        <span>{{ docket.attachment }}</span>
+                        <span class="docket_text_heading">ATTACHMENT 1:</span>
+                        <span>{{ docket.attachment_1 }}</span>
                     </div>
                     <div class="col-sm-4 docket_text">
                         <span class="docket_text_heading">ATTACHMENT HOURS:</span>
-                        <span>{{ docket.attachment_hours }}</span>
+                        <span>{{ docket.attachment_hours_1 }} hrs</span>
                     </div>
                 </div>
-                <div class="table-responsive m-t docket_checklist visible-md visible-lg">
-                    <h3>PLANT OPERATORS' DAILY SAFETY CHECKLIST</h3>
-                    <h4>Operators are required to check the following items before commencing work. These records are for the basis of a  plant maintenace procedure and will be subject to random inspection. Keep the record with you at all times.</h4>
-                    <h4>Before commencing operation check:</h4>
+                {% endif %}
+                {% if docket.attachment_2 != None %}
+                <div class="row">
+                    <div class="col-sm-4 docket_text">
+                        <span class="docket_text_heading">ATTACHMENT 2:</span>
+                        <span>{{ docket.attachment_2 }}</span>
+                    </div>
+                    <div class="col-sm-4 docket_text">
+                        <span class="docket_text_heading">ATTACHMENT HOURS:</span>
+                        <span>{{ docket.attachment_hours_2 }} hrs</span>
+                    </div>
+                </div>
+                {% endif %}
+                {% if docket.attachment_3 != None %}
+                <div class="row">
+                    <div class="col-sm-4 docket_text">
+                        <span class="docket_text_heading">ATTACHMENT 3:</span>
+                        <span>{{ docket.attachment_3 }}</span>
+                    </div>
+                    <div class="col-sm-4 docket_text">
+                        <span class="docket_text_heading">ATTACHMENT HOURS:</span>
+                        <span>{{ docket.attachment_hours_3 }} hrs</span>
+                    </div>
+                </div>
+                {% endif %}
+                {% if docket.daily_notes != "" %}
+                <div class="row">
+                    <div class="col-sm-12 docket_text">
+                        <span class="docket_text_heading">DAILY NOTES:</span><br>
+                        <span>{{ docket.daily_notes }}</span>
+                    </div>
+                </div>
+                {% endif %}
+                <div class="table-responsive m-t docket_checklist visible-md visible-lg" style="padding-left: 15px;">
+                    <div>
+                        <h3>PLANT OPERATORS' DAILY SAFETY CHECKLIST</h3>
+                        <h4>Operators are required to check the following items before commencing work. These records are for the basis of a  plant maintenace procedure and will be subject to random inspection. Keep the record with you at all times.</h4>
+                        <h4>Before commencing operation check:</h4>
+                    </div>
                     <table class="table invoice-table">
                         <tbody>
                         <tr>
@@ -188,18 +224,22 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="row visible-md visible-lg">
+                {% if docket.fault != "" %}
+                <div class="row">
                     <div class="col-sm-12 docket_text">
                         <span class="docket_text_heading">Details of Fault/Defect:</span>
                         <span>{{ docket.fault }}</span>
                     </div>
                 </div>
-                <div class="row visible-md visible-lg">
+                {% endif %}
+                {% if docket.reported_to != "" %}
+                <div class="row">
                     <div class="col-sm-12 docket_text">
                         <span class="docket_text_heading">Fault Reported to:</span>
                         <span>{{ docket.reported_to }}</span>
                     </div>
                 </div>
+                {% endif %}
                 <form id="sign_form" role="form" method="POST">
                     <input type="hidden" id="myVariable" name="" />
                     {% csrf_token %}
