--- a/sniffersapp/templates/timesheet/timesheet_edit.html
+++ b/sniffersapp/templates/timesheet/timesheet_edit.html
@@ -54,90 +54,83 @@
       <input type="hidden" id="myVariable" name="" />
       {% csrf_token %}
       {% if edit_timesheet_form.errors %}
-      <div class="ibox-content m-b-sm border-bottom">
-          <h4><strong>Please complete the following fields:</strong></h4>
-          {% for field in edit_timesheet_form %}
-            {% if field.errors %}
-            <li style="font-weight: 700;font-size: 13px;">
-              {{ field.label }}
-            </li>
-            {% endif %}
-          {% endfor %}
+      <div class="ibox-content m-b-sm error-box">
+          <strong>Please ensure that you have completed all the required fields *</strong>
       </div>
       {% endif %}
       <div class="ibox-content m-b-sm border-bottom">
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label>Date</label>
-              {{ edit_timesheet_form.docket_date }}
+              <label>Date *</label>
+              {{ edit_timesheet_form.timesheet_date }}
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group clockpicker" style="margin-left: 20px;" data-autoclose="true">
-              <label>{{ edit_timesheet_form.start_time.label }}</label>
+              <label>{{ edit_timesheet_form.start_time.label }} *</label>
               {{ edit_timesheet_form.start_time }}
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group clockpicker" style="margin-left: 20px;" data-autoclose="true">
-              <label>{{ edit_timesheet_form.finish_time.label }}</label>
+              <label>{{ edit_timesheet_form.finish_time.label }} *</label>
               {{ edit_timesheet_form.finish_time }}
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label>{{ edit_timesheet_form.lunch.label }}</label>
+              <label>{{ edit_timesheet_form.lunch.label }} *</label>
               {{ edit_timesheet_form.lunch }}
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label>{{ edit_timesheet_form.smoko.label }}</label>
+              <label>{{ edit_timesheet_form.smoko.label }} *</label>
               {{ edit_timesheet_form.smoko }}
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label>Shift</label>
+              <label>Shift *</label>
               {{ edit_timesheet_form.docket_shift }}
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label style="display: block;" >{{ edit_timesheet_form.company.label }}</label>
+              <label style="display: block;" >{{ edit_timesheet_form.company.label }} *</label>
               {{ edit_timesheet_form.company }}
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label style="display: block;" >{{ edit_timesheet_form.project.label }}</label>
+              <label style="display: block;" >{{ edit_timesheet_form.project.label }} *</label>
               {{ edit_timesheet_form.project }}
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label style="display: block;" >{{ edit_timesheet_form.equipment.label }}</label>
+              <label style="display: block;" >Item or Plant *</label>
               {{ edit_timesheet_form.equipment }}
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 timesheet_fields">
             <div class="form-group" style="margin-left: 20px;">
-              <label style="display: block;" >{{ edit_timesheet_form.equipment_hours.label }}</label>
-              {{ edit_timesheet_form.equipment_hours }}
+              <label style="display: block;" >Unit No. *</label>
+              {{ edit_timesheet_form.equipment_num }}
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-12">
             <div class="form-group" style="margin-left: 20px;">
-              <label style="display: block;" >additional Info</label>
+              <label style="display: block;" >Additional Info</label>
               {{ edit_timesheet_form.additional_info }}
             </div>
           </div>
@@ -153,6 +146,10 @@
   </div>
 </div>
 
+<!-- Pre-popultaes the equipment name field -->
+<div id="try_this" style="display: none;">
+  {{ equipment.make }} {{ equipment.model }}
+</div>
 {% endblock content %}
 
 {% block javascript %}
@@ -177,6 +174,23 @@ $('#docket_date_tag').datepicker({
     calendarWeeks: true,
     autoclose: true
 });
+
+// Sets the project select box to empty if the company select box is changed
+$("#id_company").on('change',function(){
+  $("#id_project").empty()
+});
+
+$("#equipment_name_tag").on('change',function(){
+    var equip_id = $(this).val();
+    $.get("{% url 'timesheet:timecard_new' timesheet.slug %}", {content: equip_id},
+    function(data){
+      var result = $('<div />').append(data).find('#try_this').html();
+      $('#try_this').html(result);
+      var equip_name = $('#try_this').text();
+      $("#equipment_num_tag").val(equip_name);
+    });
+});
+
 </script>
 
 {{ edit_timesheet_form.media.js }}
