--- a/sniffersapp/templates/timesheet/timesheet_list.html
+++ b/sniffersapp/templates/timesheet/timesheet_list.html
@@ -17,7 +17,7 @@
 {% endblock breadcrumb %}
 
 {% block content %}
-{% if user.is_staff %}
+<!-- {% if user.is_staff %}
 <div class="row">
     <div class="docket_buttons btn-group visible-md visible-lg pull-left">
         <a class="btn btn-primary btn-sm" href=""><i class="fa fa-upload" style="padding-right: 5px;"></i>Export CSV</a></li>
@@ -26,7 +26,7 @@
         <a class="btn btn-primary btn-sm" href=""><i class="fa fa-exchange" style="padding-right: 5px;"></i>Export MYOB</a></li>
     </div>
 </div>
-{% endif %}
+{% endif %} -->
 
 <div class="col-lg-12">
     <div class="ibox float-e-margins col-lg-12">
@@ -36,8 +36,9 @@
                     <thead>
                         <tr>
                             <th>Status</th>
-                            <th>User</th>
-                            <th>Week Starting</th>
+                            <th class="hidden-xs hidden-sm">User</th>
+                            <th>Week Start</th>
+                            <th class="hidden-xs hidden-sm">Week End</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -52,11 +53,14 @@
                               <span class="label label-success">{{ date.status }}</span>
                               {% endif %}
                           </td>
-                          <td class="docket-text">
+                          <td class="docket-text hidden-xs hidden-sm">
                               <b>{{ date.created_user.first_name }} {{ date.created_user.last_name }}</b><br>
                           </td>
                           <td class="docket-text">
-                              <b>{{ date.docket_date }}</b><br>
+                              <b>{{ date.week_start_date|date:"l" }} - {{ date.week_start_date }}</b><br>
+                          </td>
+                          <td class="docket-text hidden-xs hidden-sm">
+                              <b>{{ date.week_end_date|date:"l" }} - {{ date.week_end_date }}</b><br>
                           </td>
                         </tr>
                         {% endfor timesheet%}
