--- a/sniffersapp/templates/timesheet/timesheet_weekly.html
+++ b/sniffersapp/templates/timesheet/timesheet_weekly.html
@@ -93,7 +93,7 @@
                             <th class="hidden-xs hidden-sm">User</th>
                             <th>Day</th>
                             <th>Date</th>
-                            <th>Hours</th>
+                            <th>Payable Hours</th>
                             <th class="hidden-xs hidden-sm">Start Time</th>
                             <th class="hidden-xs hidden-sm">Finish Time</th>
                             <th class="hidden-xs hidden-sm">Project</th>
@@ -116,10 +116,10 @@
                                 <b>{{ timesheet.created_user.first_name }} {{ timesheet.created_user.last_name }}</b>
                             </td>
                             <td class="docket-text">
-                                <b>{{ timesheet.docket_date|date:"l"}}</b>
+                                <b>{{ timesheet.timesheet_date|date:"l"}}</b>
                             </td>
                             <td class="docket-text">
-                                {{ timesheet.docket_date }}
+                                {{ timesheet.timesheet_date }}
                             </td>
                             <td class="docket-text">
                                 {{ timesheet.payable_hours.0 }}h {{ timesheet.payable_hours.1 }}m
@@ -153,7 +153,7 @@
                         <div class="ibox-title weekly_timesheet_sum_heading" style="text-align: center;">
                             <div style="font-size: 20px; padding-bottom: 15px; border-bottom: 2px solid #b8bbbc;">
                                 Timecard<br>
-                                {{ timesheet_sum.docket_date|date:"l" }} {{ timesheet_sum.docket_date }}
+                                {{ timesheet_sum.timesheet_date|date:"l" }} {{ timesheet_sum.timesheet_date }}
                             </div>
                         </div>
                         <div class="ibox-content">
@@ -173,8 +173,12 @@
                             <div class="timesheet-detail">
                                 <ul class="list-group clear-list">
                                     <li class="list-group-item fist-item">
-                                        <span class="pull-right">{{ timesheet_sum.docket_date }}</span>
+                                        <span class="pull-right">{{ timesheet_sum.timesheet_date }}</span>
                                         Date
+                                    </li>
+                                    <li class="list-group-item">
+                                        <span class="pull-right">{{ timesheet.payable_hours.0 }}h {{ timesheet.payable_hours.1 }}m</span>
+                                        Payable Hours
                                     </li>
                                     <li class="list-group-item">
                                         <span class="pull-right">{{ timesheet_sum.start_time }}</span>
@@ -219,8 +223,8 @@
                                         ID
                                     </li>
                                     <li class="list-group-item">
-                                        <span class="pull-right">{{ timesheet_sum.equipment_hours }}</span>
-                                        Hours
+                                        <span class="pull-right">{{ timesheet_sum.equipment_num }}</span>
+                                        Unit No
                                     </li>
                                 </ul>
                             </div>
