--- a/sniffersapp/templates/daily_dockets/docket_signature.html
+++ b/sniffersapp/templates/daily_dockets/docket_signature.html
@@ -6,6 +6,8 @@
 
 {% block css %}
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
+<link href="{% static 'css/jquery.autocomplete.css' %}" rel="stylesheet">
+{{ sign_form.media.css }}
 {% endblock %}
 
 {% block actions %}
@@ -30,9 +32,10 @@
 {% endblock breadcrumb %}
 
 {% block content %}
+
 <div class="col-lg-12">
   <div id="fault_error_msg" class="ibox-content m-b-sm error-box" style="display: none;">
-      <strong>Please sign before submitting</strong>
+      <strong>Please add Supervisors name, and sign before submitting</strong>
   </div>
 </div>
 <div class="row">
@@ -87,10 +90,6 @@
                     <div class="col-sm-4 docket_text">
                         <span class="docket_text_heading">OPERATOR:</span>
                         <span id="docket_user">{{ docket.created_user }}</span>
-                    </div>
-                    <div class="col-sm-4 docket_text">
-                        <span class="docket_text_heading">SUPERVISOR:</span>
-                        <span id="docket_supervisor">{{ docket.supervisor }}</span>
                     </div>
                 </div>
                 <div class="row">
@@ -243,15 +242,16 @@
                 <form id="sign_form" role="form" method="POST">
                     <input type="hidden" id="myVariable" name="" />
                     {% csrf_token %}
+
                     <div class="row docket_signature">
-                        <div class="col-sm-6 docket_text docket_signature_item">
-                            <span class="docket_text_heading">Operator Signature</span>
-                                <div class="wrapper">
-                                  <span class="operator-sig-validation"></span>
-                                  <canvas id="operator-sign-pad" class="signature-pad" style="border: .5px solid #d5d5d5;"></canvas>
-                                </div>
-                            <input class="hidden" name="operator_sign" id="operator_sign">
-                        </div>
+                      <div class="row">
+                          <div id="supervisor_name" class="col-sm-6" style="padding-left: 0px;">
+                              <div class="form-group">
+                                  <label style="padding-left: 15px;">{{ sign_form.supervisor.label }} *</label>
+                                  {{ sign_form.supervisor }}
+                              </div>
+                          </div>
+                      </div>
                         <div class="col-sm-6 docket_text docket_signature_item">
                             <span class="docket_text_heading">Supervisor Signature</span>
                             <div class="wrapper">
@@ -259,6 +259,14 @@
                               <canvas id="supervisor-sign-pad" class="signature-pad" style="border: .5px solid #d5d5d5;"></canvas>
                             </div>
                             <input class="hidden" name="supervisor_sign" id="supervisor_sign">
+                        </div>
+                        <div class="col-sm-6 docket_text docket_signature_item">
+                            <span class="docket_text_heading">Operator Signature</span>
+                                <div class="wrapper">
+                                  <span class="operator-sig-validation"></span>
+                                  <canvas id="operator-sign-pad" class="signature-pad" style="border: .5px solid #d5d5d5;"></canvas>
+                                </div>
+                            <input class="hidden" name="operator_sign" id="operator_sign">
                         </div>
                     </div>
                     <div class="row">
@@ -270,12 +278,17 @@
 {% endblock content %}
 
 {% block javascript %}
+
+<!-- Autocomplete -->
+<script src="{% static 'js/jquery.autocomplete.js' %}"></script>
+
 <script src="{% static 'js/plugins/signature-pad/signature_pad.min.js' %}"></script>
 <script>
 var opSignPad = new SignaturePad(document.getElementById('operator-sign-pad'));
 var supSignPad = new SignaturePad(document.getElementById('supervisor-sign-pad'));
+
 $('#sign_form').submit(function() {
-    if (opSignPad.isEmpty() || supSignPad.isEmpty()) {
+    if (opSignPad.isEmpty() || supSignPad.isEmpty() || $.trim($('#supervisor_tag').val()) == '') {
         $('#fault_error_msg').show();
         $('html, body').animate({ scrollTop: 0 }, 'fast');
         return false;
@@ -284,5 +297,19 @@ $('#sign_form').submit(function() {
     $('input#supervisor_sign').val(supSignPad.toDataURL());
 });
 
+
+var available_tags = [
+    {% for supervisor in supervisor_name_list %}
+      "{{ supervisor }}",
+    {% endfor %}
+];
+
+$(function() {
+  $("#supervisor_tag").autocomplete({
+    source:[available_tags]
+  });
+});
+
 </script>
+{{ sign_form.media.js }}
 {% endblock javascript %}
